# curse-downloader-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
