[package]
name = "curse-downloader-rs"
version = "2.0.0"
authors = ["Rafał Opiłowski <rafalopilowski1@outlook.com>"]
features = ["rustls-tls"]

[dependencies]
serde="*"
serde_derive="*"
serde_json="*"
reqwest="*"
tokio="*"
futures="*"
bytes = "*"
regex="*"
rustls="*" 
md5 = "*"
kuchiki="*"
tendril="*"
