[package]
name = "curse-downloader-rs"
version = "3.0.0"
authors = ["Rafał Opiłowski <rafalopilowski1@outlook.com>"]
features = ["rustls-tls"]
edition = "2018"

[dependencies]
serde="*"
serde_derive="*"
serde_json="*"
reqwest="*"
tokio="*"
futures="*"
bytes = "*"
regex="*"
rustls="*"
md5 = "*"
kuchiki="*"
tendril="*"
