[package]
name = "curse-downloader-rs"
version = "3.0.0"
authors = ["Rafał Opiłowski <rafalopilowski1@outlook.com>"]
edition = "2018"

[dependencies]
serde={version="1.0.127", features =["derive"]}
serde_json="1.0.66"
reqwest={version="0.11.4", features=["stream"]}
tokio={version="1.10.0",features =["full"]}
tokio-util = "0.6.7"
futures="0.3.16"
bytes = "1.0.1"

